software-center (2.1.17.3) UNRELEASED; urgency=low

  [ Kiwinote ]
  * softwarecenter/backend/aptd.py:
    - don't crash on cancelling policykit auths

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 09 Sep 2010 19:15:18 +0200

software-center (2.1.17.2) maverick; urgency=low

  * softwarecenter/backend/aptd.py:
    - use policykit1.PK_ACTION_INSTALL_PURCHASED_PACKAGES priv from
      aptdaemon (LP: #631619)
  * debian/control:
    - depend on the right aptdaemon version

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 09 Sep 2010 19:15:18 +0200

software-center (2.1.17.1) maverick; urgency=low

  [ Michael Vogt ]
  * softwarecenter/backend/aptd.py:
    - use the system-wide proxy instead of the gnome
      one by default (LP: #628823)
    - when installing a purchase only update from the just
      added repository to avoid breaking if other sources.list
      entries are incorrect
    - fix signal emite in TransactionStopped
  * debian/control:
    - depend on current aptdaemon

  [ Kiwinote ]
  * software-center:
    - import Decimal before we need it as a workaround for (LP: #607705)
      (testcase: LANGUAGE=tr_TR LC_ALL=tr_TR.utf8 ./software-center)
  * softwarecenter/apt/apthistory.py:
    - use ascii_lower() rather than lower()
      much thanks to M. Vefa Bicakci via bug 581207
      (testcase: LANGUAGE=tr_TR LC_ALL=tr_TR.utf8 ./software-center)
  * software-center/db/application.py:
    - reset app.pkgname once we know deb.pkgname
  * softwarecenter/view/dependency_dialogs.py:
    - fail nicely if pkg not in cache (ie all deb files...) (LP: #634060)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 09 Sep 2010 17:07:29 +0200

software-center (2.1.17) maverick; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/purchasedialog.py:
    - make popup window a modal dialog so it works with
      metacity too (LP: #625398)
  * softwarecenter/view/softwarepane.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/channelpane.py