@@ -248,8 +248,9 @@ class AppStore(gtk.GenericTreeModel):
                     if term.startswith("AP"):
                         pkgname = term[2:]
                         break
-                app = Application("", pkgname)
-                self.apps.append(app)
+                if pkgname:
+                    app = Application("", pkgname)
+                    self.apps.append(app)
                 
         # if we only have nonapps to be displayed, don't hide them
         if (not self.nonapps_visible and
