@@ -3,6 +3,8 @@ software-center (2.1.17.3) UNRELEASED; urgency=low
   [ Kiwinote ]
   * softwarecenter/backend/aptd.py:
     - don't crash on cancelling policykit auths
+  * softwarecenter/view/appview.py:
+    - don't crash on searches containing ", "
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 09 Sep 2010 19:15:18 +0200
 
